json/2.1/modules/ROOT/pages/json-reference.adoc
= JSON Module Reference - Mule 4
:page-aliases: connectors::json/json-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

JSON Module v2.1

The JSON module provides extra functionality for processing JSON documents. Although DataWeave is the tool that Mule uses to access data in JSON documents, this module provides extra functionality that falls outside of DataWeave's scope, like schema validation.

Release Notes: xref:release-notes::connector/json-module-release-notes.adoc[JSON Module Release Notes]


== Configurations
---
[[config]]
=== Default Configuration


Default configuration


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
|===

== Operations

[[validateSchema]]
=== Validate Schema
`<json:validate-schema>`


Validates that the input content is compliant with a given schema. This operation supports referencing many schemas (using comma as a separator) which include each other.

NOTE: This connector supports JSON Schema Validation Drafts 3 and 4 only.

==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Schema a| String |  The location in which the schema to validate against is to be found. This attribute supports URI representations such as `+http://org.mule/schema.json+` or "resource:/schema.json". It also supports a most common classpath reference such as simply "schema.json". |  | x
| Content a| Any |  The JSON document to be validated |  #[payload] |
| Schema Redirects a| Array of <<SchemaRedirect>> |  Allows to redirect any given URI in the Schema (or even the schema location itself) to any other specific URI. The most common use case for this feature is to map external namespace URIs without the need to a local resource |  |
| Dereferencing a| Enumeration, one of:

** CANONICAL
** INLINE |  Draft v4 defines two dereferencing modes: canonical and inline. CANONICAL will be the default option but INLINE can also be specified. When validating a v3 draft this attribute is ignored. |  CANONICAL |
| Allow Duplicate Keys a| Boolean |  if true, the validator will allow duplicate keys, otherwise it will fail. |  true |
|===



==== Throws

* JSON:INVALID_INPUT_JSON
* JSON:INVALID_SCHEMA
* JSON:SCHEMA_NOT_FOUND
* JSON:SCHEMA_NOT_HONOURED



== Types
[[SchemaRedirect]]
=== Schema Redirect

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| From a| String | The original location |  | x
| To a| String | The redirection location |  | x
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
