json/2.3/modules/ROOT/pages/json-reference.adoc
= JSON Module Reference - Mule 4
:page-aliases: connectors::json/json-reference.adoc



JSON Module v2.3

The JSON module provides extra functionality for processing JSON documents. Although DataWeave is the tool that Mule uses to access data in JSON documents, this module provides extra functionality that falls outside of DataWeave's scope, like schema validation.

Release Notes: xref:release-notes::connector/json-module-release-notes.adoc[JSON Module Release Notes]


== Configurations
---
[[config]]
=== Default Configuration


Default configuration


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
|===

== Operations

[[validateSchema]]
=== Validate Schema
`<json:validate-schema>`


Validates that the input content is compliant with a given schema. This operation supports referencing many schemas (using comma as a separator) which include each other.

NOTE: This connector supports JSON Schema Validation Drafts 3 and 4 only.

==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Content a| Any |  The JSON document to validate. |  #[payload] | 
| Schema Redirects a| Array of <<SchemaRedirect>> | Allows to redirect any given URI in the Schema (or even the schema location itself) to any other specific URI. The most common use case for this feature is to map external namespace URIs without the need to a local resource. |  |
| Dereferencing a| Enumeration, one of:
** CANONICAL
** INLINE |  Draft v4 defines two dereferencing modes: canonical and inline. CANONICAL is the default option, you can also specify INLINE. When validating a v3 draft, this attribute is ignored. |  CANONICAL|
| Allow Duplicate Keys a| Boolean |  If true, the validator allows duplicate keys, otherwise it fails |  true |
| Allow Arbitrary Precision a| Boolean |  If true, the validator uses arbitrary precision when reading floating point values, otherwise it uses double precision.  |  false |
| Schema a| String |  The location of the validate schema to validate. This attribute supports URI representations such as "http://org.mule/schema.json" or "resource:/schema.json". It also supports a most common classpath reference such as simply "schema.json". |  | 
| SchemaContent a| String |  The content of the schema to validate in text format.|  | 
|======================



==== Throws

* JSON:INVALID_INPUT_JSON
* JSON:INVALID_SCHEMA
* JSON:SCHEMA_NOT_FOUND
* JSON:SCHEMA_NOT_HONOURED
* JSON:SCHEMA_INPUT_ERROR



== Types
[[SchemaRedirect]]
=== Schema Redirect

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| From a| String | The original location |  | x
| To a| String | The redirection location |  | x
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
